src/LittleNicParser.java
// $ANTLR 3.5 C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g 2013-04-25 16:13:17

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class LittleNicParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BLOCK", "BOOLEAN", "CALL", "COMMENT", 
		"DECL", "DIGIT", "FUNC", "ID", "INTEGER", "LETTER", "NEGATION", "PARAM", 
		"PROC", "STMT", "STRING", "TYPE", "VARDECL", "WS", "'!='", "'('", "')'", 
		"'*'", "'+'", "','", "'-'", "':'", "':='", "';'", "'<'", "'<='", "'=='", 
		"'>'", "'>='", "'BEGIN'", "'DO'", "'ELSE'", "'END'", "'FUNCTION'", "'IF'", 
		"'OUTPUT'", "'PROCEDURE'", "'PROGRAM'", "'THEN'", "'VAR'", "'WHILE'"
	};
	public static final int EOF=-1;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int BLOCK=4;
	public static final int BOOLEAN=5;
	public static final int CALL=6;
	public static final int COMMENT=7;
	public static final int DECL=8;
	public static final int DIGIT=9;
	public static final int FUNC=10;
	public static final int ID=11;
	public static final int INTEGER=12;
	public static final int LETTER=13;
	public static final int NEGATION=14;
	public static final int PARAM=15;
	public static final int PROC=16;
	public static final int STMT=17;
	public static final int STRING=18;
	public static final int TYPE=19;
	public static final int VARDECL=20;
	public static final int WS=21;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public LittleNicParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public LittleNicParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return LittleNicParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g"; }


	    public ErrorReporter err;
	    public void displayRecognitionError(String[] tokenNames,
	                                        RecognitionException e) {
	      String msg = getErrorMessage(e, tokenNames);
		  err.reportSyntaxError(e.line, e.charPositionInLine, msg);
	    }


	public static class prog_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "prog"
	// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:40:1: prog : 'PROGRAM' ID ';' ( declList )? 'BEGIN' ( stmtList )? 'END' ';' EOF -> ^( ID ( declList )? ( stmtList )? ) ;
	public final LittleNicParser.prog_return prog() throws RecognitionException {
		LittleNicParser.prog_return retval = new LittleNicParser.prog_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal1=null;
		Token ID2=null;
		Token char_literal3=null;
		Token string_literal5=null;
		Token string_literal7=null;
		Token char_literal8=null;
		Token EOF9=null;
		ParserRuleReturnScope declList4 =null;
		ParserRuleReturnScope stmtList6 =null;

		CommonTree string_literal1_tree=null;
		CommonTree ID2_tree=null;
		CommonTree char_literal3_tree=null;
		CommonTree string_literal5_tree=null;
		CommonTree string_literal7_tree=null;
		CommonTree char_literal8_tree=null;
		CommonTree EOF9_tree=null;
		RewriteRuleTokenStream stream_45=new RewriteRuleTokenStream(adaptor,"token 45");
		RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
		RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
		RewriteRuleSubtreeStream stream_stmtList=new RewriteRuleSubtreeStream(adaptor,"rule stmtList");
		RewriteRuleSubtreeStream stream_declList=new RewriteRuleSubtreeStream(adaptor,"rule declList");

		try {
			// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:41:2: ( 'PROGRAM' ID ';' ( declList )? 'BEGIN' ( stmtList )? 'END' ';' EOF -> ^( ID ( declList )? ( stmtList )? ) )
			// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:41:4: 'PROGRAM' ID ';' ( declList )? 'BEGIN' ( stmtList )? 'END' ';' EOF
			{
			string_literal1=(Token)match(input,45,FOLLOW_45_in_prog100);  
			stream_45.add(string_literal1);

			ID2=(Token)match(input,ID,FOLLOW_ID_in_prog102);  
			stream_ID.add(ID2);

			char_literal3=(Token)match(input,31,FOLLOW_31_in_prog104);  
			stream_31.add(char_literal3);

			// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:42:3: ( declList )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==41||LA1_0==44||LA1_0==47) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:42:3: declList
					{
					pushFollow(FOLLOW_declList_in_prog108);
					declList4=declList();
					state._fsp--;

					stream_declList.add(declList4.getTree());
					}
					break;

			}

			string_literal5=(Token)match(input,37,FOLLOW_37_in_prog113);  
			stream_37.add(string_literal5);

			// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:44:3: ( stmtList )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==ID||LA2_0==37||(LA2_0 >= 42 && LA2_0 <= 43)||LA2_0==48) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:44:3: stmtList
					{
					pushFollow(FOLLOW_stmtList_in_prog117);
					stmtList6=stmtList();
					state._fsp--;

					stream_stmtList.add(stmtList6.getTree());
					}
					break;

			}

			string_literal7=(Token)match(input,40,FOLLOW_40_in_prog122);  
			stream_40.add(string_literal7);

			char_literal8=(Token)match(input,31,FOLLOW_31_in_prog124);  
			stream_31.add(char_literal8);

			EOF9=(Token)match(input,EOF,FOLLOW_EOF_in_prog128);  
			stream_EOF.add(EOF9);

			// AST REWRITE
			// elements: declList, ID, stmtList
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 47:3: -> ^( ID ( declList )? ( stmtList )? )
			{
				// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:47:6: ^( ID ( declList )? ( stmtList )? )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot(stream_ID.nextNode(), root_1);
				// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:47:11: ( declList )?
				if ( stream_declList.hasNext() ) {
					adaptor.addChild(root_1, stream_declList.nextTree());
				}
				stream_declList.reset();

				// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:47:21: ( stmtList )?
				if ( stream_stmtList.hasNext() ) {
					adaptor.addChild(root_1, stream_stmtList.nextTree());
				}
				stream_stmtList.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "prog"


	public static class declList_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "declList"
	// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:51:1: declList : decl ( ';' decl )* -> ( decl )+ ;
	public final LittleNicParser.declList_return declList() throws RecognitionException {
		LittleNicParser.declList_return retval = new LittleNicParser.declList_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal11=null;
		ParserRuleReturnScope decl10 =null;
		ParserRuleReturnScope decl12 =null;

		CommonTree char_literal11_tree=null;
		RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
		RewriteRuleSubtreeStream stream_decl=new RewriteRuleSubtreeStream(adaptor,"rule decl");

		try {
			// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:52:2: ( decl ( ';' decl )* -> ( decl )+ )
			// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:52:4: decl ( ';' decl )*
			{
			pushFollow(FOLLOW_decl_in_declList154);
			decl10=decl();
			state._fsp--;

			stream_decl.add(decl10.getTree());
			// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:52:9: ( ';' decl )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==31) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:52:10: ';' decl
					{
					char_literal11=(Token)match(input,31,FOLLOW_31_in_declList157);  
					stream_31.add(char_literal11);

					pushFollow(FOLLOW_decl_in_declList159);
					decl12=decl();
					state._fsp--;

					stream_decl.add(decl12.getTree());
					}
					break;

				default :
					break loop3;
				}
			}

			// AST REWRITE
			// elements: decl
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 53:3: -> ( decl )+
			{
				if ( !(stream_decl.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_decl.hasNext() ) {
					adaptor.addChild(root_0, stream_decl.nextTree());
				}
				stream_decl.reset();

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declList"


	public static class decl_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "decl"
	// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:56:1: decl : ( varDecl | procDecl | funcDecl );
	public final LittleNicParser.decl_return decl() throws RecognitionException {
		LittleNicParser.decl_return retval = new LittleNicParser.decl_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope varDecl13 =null;
		ParserRuleReturnScope procDecl14 =null;
		ParserRuleReturnScope funcDecl15 =null;


		try {
			// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:57:2: ( varDecl | procDecl | funcDecl )
			int alt4=3;
			switch ( input.LA(1) ) {
			case 47:
				{
				alt4=1;
				}
				break;
			case 44:
				{
				alt4=2;
				}
				break;
			case 41:
				{
				alt4=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:57:4: varDecl
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_varDecl_in_decl180);
					varDecl13=varDecl();
					state._fsp--;

					adaptor.addChild(root_0, varDecl13.getTree());

					}
					break;
				case 2 :
					// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:58:4: procDecl
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_procDecl_in_decl185);
					procDecl14=procDecl();
					state._fsp--;

					adaptor.addChild(root_0, procDecl14.getTree());

					}
					break;
				case 3 :
					// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:59:4: funcDecl
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_funcDecl_in_decl190);
					funcDecl15=funcDecl();
					state._fsp--;

					adaptor.addChild(root_0, funcDecl15.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "decl"


	public static class varDeclList_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "varDeclList"
	// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:62:1: varDeclList : varDecl ( ';' varDecl )* -> ( varDecl )+ ;
	public final LittleNicParser.varDeclList_return varDeclList() throws RecognitionException {
		LittleNicParser.varDeclList_return retval = new LittleNicParser.varDeclList_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal17=null;
		ParserRuleReturnScope varDecl16 =null;
		ParserRuleReturnScope varDecl18 =null;

		CommonTree char_literal17_tree=null;
		RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
		RewriteRuleSubtreeStream stream_varDecl=new RewriteRuleSubtreeStream(adaptor,"rule varDecl");

		try {
			// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:63:2: ( varDecl ( ';' varDecl )* -> ( varDecl )+ )
			// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:63:4: varDecl ( ';' varDecl )*
			{
			pushFollow(FOLLOW_varDecl_in_varDeclList201);
			varDecl16=varDecl();
			state._fsp--;

			stream_varDecl.add(varDecl16.getTree());
			// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:63:12: ( ';' varDecl )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==31) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:63:13: ';' varDecl
					{
					char_literal17=(Token)match(input,31,FOLLOW_31_in_varDeclList204);  
					stream_31.add(char_literal17);

					pushFollow(FOLLOW_varDecl_in_varDeclList206);
					varDecl18=varDecl();
					state._fsp--;

					stream_varDecl.add(varDecl18.getTree());
					}
					break;

				default :
					break loop5;
				}
			}

			// AST REWRITE
			// elements: varDecl
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 64:3: -> ( varDecl )+
			{
				if ( !(stream_varDecl.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_varDecl.hasNext() ) {
					adaptor.addChild(root_0, stream_varDecl.nextTree());
				}
				stream_varDecl.reset();

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "varDeclList"


	public static class varDecl_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "varDecl"
	// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:67:1: varDecl : 'VAR' ID ':' TYPE -> ^( VARDECL TYPE ID ) ;
	public final LittleNicParser.varDecl_return varDecl() throws RecognitionException {
		LittleNicParser.varDecl_return retval = new LittleNicParser.varDecl_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal19=null;
		Token ID20=null;
		Token char_literal21=null;
		Token TYPE22=null;

		CommonTree string_literal19_tree=null;
		CommonTree ID20_tree=null;
		CommonTree char_literal21_tree=null;
		CommonTree TYPE22_tree=null;
		RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_TYPE=new RewriteRuleTokenStream(adaptor,"token TYPE");
		RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");

		try {
			// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:68:2: ( 'VAR' ID ':' TYPE -> ^( VARDECL TYPE ID ) )
			// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:68:4: 'VAR' ID ':' TYPE
			{
			string_literal19=(Token)match(input,47,FOLLOW_47_in_varDecl226);  
			stream_47.add(string_literal19);

			ID20=(Token)match(input,ID,FOLLOW_ID_in_varDecl228);  
			stream_ID.add(ID20);

			char_literal21=(Token)match(input,29,FOLLOW_29_in_varDecl230);  
			stream_29.add(char_literal21);

			TYPE22=(Token)match(input,TYPE,FOLLOW_TYPE_in_varDecl232);  
			stream_TYPE.add(TYPE22);

			// AST REWRITE
			// elements: ID, TYPE
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 69:3: -> ^( VARDECL TYPE ID )
			{
				// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:69:6: ^( VARDECL TYPE ID )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(VARDECL, "VARDECL"), root_1);
				adaptor.addChild(root_1, stream_TYPE.nextNode());
				adaptor.addChild(root_1, stream_ID.nextNode());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "varDecl"


	public static class procDecl_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "procDecl"
	// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:72:1: procDecl : 'PROCEDURE' ID '(' ( paramList )? ')' ':=' ( varDeclList )? 'BEGIN' ( stmtList )? 'END' -> ^( PROC ID ( paramList )? ( varDeclList )? ( stmtList )? ) ;
	public final LittleNicParser.procDecl_return procDecl() throws RecognitionException {
		LittleNicParser.procDecl_return retval = new LittleNicParser.procDecl_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal23=null;
		Token ID24=null;
		Token char_literal25=null;
		Token char_literal27=null;
		Token string_literal28=null;
		Token string_literal30=null;
		Token string_literal32=null;
		ParserRuleReturnScope paramList26 =null;
		ParserRuleReturnScope varDeclList29 =null;
		ParserRuleReturnScope stmtList31 =null;

		CommonTree string_literal23_tree=null;
		CommonTree ID24_tree=null;
		CommonTree char_literal25_tree=null;
		CommonTree char_literal27_tree=null;
		CommonTree string_literal28_tree=null;
		CommonTree string_literal30_tree=null;
		CommonTree string_literal32_tree=null;
		RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
		RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
		RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
		RewriteRuleTokenStream stream_24=new RewriteRuleTokenStream(adaptor,"token 24");
		RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
		RewriteRuleSubtreeStream stream_stmtList=new RewriteRuleSubtreeStream(adaptor,"rule stmtList");
		RewriteRuleSubtreeStream stream_varDeclList=new RewriteRuleSubtreeStream(adaptor,"rule varDeclList");
		RewriteRuleSubtreeStream stream_paramList=new RewriteRuleSubtreeStream(adaptor,"rule paramList");

		try {
			// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:73:2: ( 'PROCEDURE' ID '(' ( paramList )? ')' ':=' ( varDeclList )? 'BEGIN' ( stmtList )? 'END' -> ^( PROC ID ( paramList )? ( varDeclList )? ( stmtList )? ) )
			// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:73:4: 'PROCEDURE' ID '(' ( paramList )? ')' ':=' ( varDeclList )? 'BEGIN' ( stmtList )? 'END'
			{
			string_literal23=(Token)match(input,44,FOLLOW_44_in_procDecl255);  
			stream_44.add(string_literal23);

			ID24=(Token)match(input,ID,FOLLOW_ID_in_procDecl257);  
			stream_ID.add(ID24);

			char_literal25=(Token)match(input,23,FOLLOW_23_in_procDecl259);  
			stream_23.add(char_literal25);

			// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:73:23: ( paramList )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==ID) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:73:23: paramList
					{
					pushFollow(FOLLOW_paramList_in_procDecl261);
					paramList26=paramList();
					state._fsp--;

					stream_paramList.add(paramList26.getTree());
					}
					break;

			}

			char_literal27=(Token)match(input,24,FOLLOW_24_in_procDecl264);  
			stream_24.add(char_literal27);

			string_literal28=(Token)match(input,30,FOLLOW_30_in_procDecl266);  
			stream_30.add(string_literal28);

			// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:74:3: ( varDeclList )?
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==47) ) {
				alt7=1;
			}
			switch (alt7) {
				case 1 :
					// C:\\Users\\Samir\\Documents\\University\\Y2S2\\COMP2010\\LittleNic\\src\\LittleNic.g:74:3: varDeclList
					{
					pushFollow(FOLLOW_varDeclList_in_procDecl270);
					varDeclList29=varDeclList();
					state._fsp--;

					stream_varDeclList.add(varDeclList29.getTree());
					}
					break;

			}

			string_literal30=(Token)match(input,37,FOLLOW_37_in_procDecl275);  
			stream_37.add(string_literal30);
